--- a/horror.html
+++ b/horror.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="header-left">
             <div class="logo-container">
-                <a href="index.html"><img src="./media/Logo.png"></a>
+                <a href="index.html"><img src="./media/Logo.png" alt="Square Eyes Logo"></a>
             </div>
          </div>
         <div class="header-right">
@@ -37,49 +37,49 @@
 <!--Movies Images + Descritpions + Buttons-->
 <div class="flex-content wrap">
     <div class="bathsheba">
-        <img src="https://m.media-amazon.com/images/M/MV5BMTM3NjA1NDMyMV5BMl5BanBnXkFtZTcwMDQzNDMzOQ@@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BMTM3NjA1NDMyMV5BMl5BanBnXkFtZTcwMDQzNDMzOQ@@._V1_.jpg" alt="The Conjuring Movie Poster">
         <div class="text">
             <p>The Conjuring <br> Realeased: 2013 <br> Audeince Score: 83% <br> Price: $14.99</p>
         </div>
     </div>
     <div class="annabelle">
-        <img src="https://m.media-amazon.com/images/M/MV5BOTQwZmQyYzEtODk5ZC00OTY3LWExMjAtYzRjNWFhNGM3MzBlXkEyXkFqcGdeQXVyNTIzOTk5ODM@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BOTQwZmQyYzEtODk5ZC00OTY3LWExMjAtYzRjNWFhNGM3MzBlXkEyXkFqcGdeQXVyNTIzOTk5ODM@._V1_.jpg" alt="Annabelle Movie Poster">
         <div class="text"> 
             <p>Annabelle <br> Realeased: 2014 <br> Audience Score: 35% <br> Price: $12.99 </p>
         </div>
     </div>
     <div class="valak">
-        <img src="https://www.themoviedb.org/t/p/original/iiLWVxvUO0WaULwIuuKrwFg80OB.jpg">
+        <img src="https://www.themoviedb.org/t/p/original/iiLWVxvUO0WaULwIuuKrwFg80OB.jpg" alt="The Nun Movie Poster">
         <div class="text">
             <p>The Nun <br> Realeased: 2018 <br> Audience Score: 35% <br> Price: $14.99</p>
         </div>
     </div>
     <div class="keydemon">
-        <img src="https://m.media-amazon.com/images/M/MV5BMTUxODU0NjQ2Nl5BMl5BanBnXkFtZTgwMTc4NDQ0MzI@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BMTUxODU0NjQ2Nl5BMl5BanBnXkFtZTgwMTc4NDQ0MzI@._V1_.jpg" alt="Insidious Chapter 4 Movie Poster">
         <div class="text">
             <p>Insidious 4 <br> Realeased: 2018 <br> Audience Score: 50% <br> Price: $12.99</p>
         </div>
     </div>
     <div class="winchester">
-        <img src="https://m.media-amazon.com/images/M/MV5BMjI2OWE5OGItMTE4Yi00ZmIzLThjZDctNTU1OTMxMTc3Yjg4XkEyXkFqcGdeQXVyMjM4NTM5NDY@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BMjI2OWE5OGItMTE4Yi00ZmIzLThjZDctNTU1OTMxMTc3Yjg4XkEyXkFqcGdeQXVyMjM4NTM5NDY@._V1_.jpg" alt="Winchester Movie Poster">
         <div class="text">
             <p>Winchester <br> Realeased: 2018 <br> Audience Score: 32% <br> Price: $9.99</p>
         </div>
     </div>
     <div class="sinister">
-        <img src="https://m.media-amazon.com/images/M/MV5BMjI5MTg1Njg0Ml5BMl5BanBnXkFtZTcwNzg2Mjc4Nw@@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BMjI5MTg1Njg0Ml5BMl5BanBnXkFtZTcwNzg2Mjc4Nw@@._V1_.jpg" alt="Sinister Movie Poster">
         <div class="text">
             <p>Sinister <br> Realeased: 2012 <br> Audience Score: 62% <br> Price: $5.99</p>
         </div>
     </div>
     <div class="pottah">
-        <img src="https://images.moviesanywhere.com/0d599d4e24105fd1c6adbe2ff6b8c9c8/e4dc40c3-415a-4292-9d41-90f160143148.jpg">
+        <img src="https://images.moviesanywhere.com/0d599d4e24105fd1c6adbe2ff6b8c9c8/e4dc40c3-415a-4292-9d41-90f160143148.jpg" alt="The Woman In Black Movie Poster Movie Poster">
         <div class="text">
             <p>Woman In Black <br> Realeased: 2012 <br> Audience Score: 54% <br> Price: $12.99</p>
         </div>
     </div>
     <div class="pennywise">
-        <img src="https://i.ebayimg.com/images/g/qHwAAOSw1Y5dcuMC/s-l1600.jpg">
+        <img src="https://i.ebayimg.com/images/g/qHwAAOSw1Y5dcuMC/s-l1600.jpg" alt="It: Chapter Two Movie Poster">
         <div class="text">
             <p>It: Chapter Two <br> Realeased: 2019 <br> Audience Score: 78% <br> Price: $14.99</p>
         </div>
