--- a/truecrime.html
+++ b/truecrime.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="header-left">
             <div class="logo-container">
-                <a href="index.html"><img src="./media/Logo.png"></a>
+                <a href="index.html"><img src="./media/Logo.png" alt="Square Eyes Logo"></a>
             </div>
          </div>
         <div class="header-right">
@@ -37,49 +37,49 @@
 <!--Movies Images + Descritpions + Buttons-->
 <div class="flex-content wrap">
     <div class="zodiac">
-        <img src="https://m.media-amazon.com/images/M/MV5BN2UwNDc5NmEtNjVjZS00OTI5LWE5YjctMWM3ZjBiZGYwMGI2XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BN2UwNDc5NmEtNjVjZS00OTI5LWE5YjctMWM3ZjBiZGYwMGI2XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_.jpg" alt="Zodiac Movie Poster">
         <div class="text">
             <p>Zodiac <br> Realeased: 2007 <br> Audience Score: 77% <br> Price: $14.99</p>
         </div>
     </div>
     <div class="dahmer">
-        <img src="https://filmarkivet.no/film/poster.ashx?id=12767&size=playerposter">
+        <img src="https://filmarkivet.no/film/poster.ashx?id=12767&size=playerposter" alt="My Firend Dahmer Movie Poster Movie Poster">
         <div class="text">
             <p>My Friend Dahmer <br> Realeased: 2017 <br> Audience Score: 61% <br> Price: $5.99</p>
         </div>
     </div>
     <div class="ghostface">
-        <img src="https://render.fineartamerica.com/images/rendered/default/poster/8/10/break/images/artworkimages/medium/3/the-scream-movie-poster-noel-wafford.jpg">
+        <img src="https://render.fineartamerica.com/images/rendered/default/poster/8/10/break/images/artworkimages/medium/3/the-scream-movie-poster-noel-wafford.jpg" alt="Scream Movie Poster">
         <div class="text">
             <p>Scream <br> Realeased: 1996 <br> Audience Score: 80% <br> Price: $16.99</p>
         </div>
     </div>
     <div class="halloween">
-        <img src="https://mir-s3-cdn-cf.behance.net/project_modules/hd/ff1b4572800213.5bf4012230ee7.png">
+        <img src="https://mir-s3-cdn-cf.behance.net/project_modules/hd/ff1b4572800213.5bf4012230ee7.png" alt="Halloween Movie Poster">
         <div class="text">
             <p>Halloween <br> Realeased: 1978 <br> Audience Score: 89% <br> Price: $9.99</p>
         </div>
     </div>
     <div class="jason">
-        <img src="https://www.themoviedb.org/t/p/original/8E9tAngvhTaFEFqsmqy9bCUISmx.jpg">
+        <img src="https://www.themoviedb.org/t/p/original/8E9tAngvhTaFEFqsmqy9bCUISmx.jpg" alt="Friday The 13th Movie Poster">
         <div class="text">
             <p>Friday The 13th <br> Realeased: 2009 <br> Audience Score: 46% <br> Price: $12.99</p>
         </div>
     </div>
     <div class="patrick">
-        <img src="https://m.media-amazon.com/images/M/MV5BZTM2ZGJmNjQtN2UyOS00NjcxLWFjMDktMDE2NzMyNTZlZTBiXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BZTM2ZGJmNjQtN2UyOS00NjcxLWFjMDktMDE2NzMyNTZlZTBiXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_.jpg" alt="American Psycho Movie Poster">
         <div class="text">
             <p>American Psycho <br> Realeased: 2000 <br> Audience Score: 85% <br> Price: $4.99</p>
         </div>
     </div>
     <div class="strangers">
-        <img src="https://m.media-amazon.com/images/I/617eDS825CL._AC_UF894,1000_QL80_.jpg">
+        <img src="https://m.media-amazon.com/images/I/617eDS825CL._AC_UF894,1000_QL80_.jpg" alt="The Strangers Movie Poster">
         <div class="text">
             <p>The Strangers <br> Realeased: 2018 <br> Audience Score: 35% <br> Price: $14.99</p>
         </div>
     </div>
     <div class="hardy">
-        <img src="https://m.media-amazon.com/images/I/91gjuOy0TGL._AC_UF894,1000_QL80_.jpg">
+        <img src="https://m.media-amazon.com/images/I/91gjuOy0TGL._AC_UF894,1000_QL80_.jpg" alt="Legend Movie Poster">
         <div class="text">
             <p>Legend <br> Realeased: 2015 <br> Audience Score: 59% <br> Price: $14.99</p>
         </div>
